fix a clipping bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,8 +40,8 @@ h3 {
 /** Header **/
 
 header {
-  margin: 3em 0 3em -5em;
-  height: 8em;
+  margin-left: -5em;
+  padding: 3em 0;
   overflow: hidden;
   
   img {
@@ -64,7 +64,8 @@ header {
   }
   
   @media (max-width: 54em) {
-    margin: 2em 0;
+    margin: 0;
+    padding: 2em 0;
   }
 }
 
